@@ -502,6 +502,7 @@ Jan Kaliszewski
 Peter van Kampen
 Rafe Kaplan
 Jacob Kaplan-Moss
+Per Øyvind Karlsen
 Lou Kates
 Hiroaki Kawai
 Sebastien Keim
